--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,13 @@ html, body {
 }
 
 body {
+  background: #3366CC; /* For browsers that do not support gradients */
+  background: linear-gradient(to right, #3366CC , #99CCFF); 
+  /*
   background: url(../images/backgrounds/architecture.jpg) center no-repeat;
   background-size: cover;
   background-attachment: fixed;
+  */
   font-family: Helvetica, Arial, sans-serif;
   font-size: 100%;
 }
