--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ html, body {
 
 body {
   background: #3366CC; /* For browsers that do not support gradients */
-  background: linear-gradient(to right, #3366CC , #99CCFF); 
+  background: linear-gradient(to right, #3366CC , #99CCFF);
   /*
   background: url(../images/backgrounds/architecture.jpg) center no-repeat;
   background-size: cover;
@@ -47,6 +47,7 @@ h3 {
   font-family: 'Gabriela', serif;
   font-size: 1.5em;
   margin-top: .5em;
+  color: #244C96;
 }
 
 img {
@@ -57,15 +58,18 @@ img {
 
 p {
   font-size: 1em;
+  color: #244C96
 }
 
 a {
-  color: black;
+  color: #244C96;
   text-decoration: none;
 }
 
 a:hover {
-  text-decoration: underline;
+  text-decoration: none;
+  font-weight: bold;
+  color: #3568CD;
 }
 
 @media only screen and (max-width: 1042px) {
