--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body {
 }
 
 h1, h2 {
-  font-family: 'Gabriela', serif;
+  font-family: 'Berkshire Swash', cursive;
   color: #fff;
 }
 
@@ -44,7 +44,7 @@ h2 {
 }
 
 h3 {
-  font-family: 'Gabriela', serif;
+  font-family: 'Berkshire Swash', cursive;
   font-size: 1.5em;
   margin-top: .5em;
   color: #244C96;
